Добавлена Swagger-документация
